# brainfreak

./: .gitignore  CMakeLists.txt  Makefile  README.md  changelog.md
examples/: pseudo-shell.bf
src/: bf.c  main.c  opt.c
src/include/: bf.h  opt.h
src/include/brainfreak/: bf.h  bf_error.h
